@@ -1,3 +1,6 @@
+2005-05-13 Stuart Prescott <s.prescott@unimelb.edu.au>
+	* enabled masquerading as another user for admin user and instrument admins 
+
 2005-05-12 Stuart Prescott <s.prescott@unimelb.edu.au>
 	* added a system(mysqldump) call to permit a backup of the entire database. 
 
